fix: remove Lombok from EmailService